<resources>
    <string name="app_name">chat app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">password</string>
    <string name="phone">phone</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="user_image">User Image</string>
    <string name="logout">logout</string>
</resources>