<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp"/>
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/userImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/baseline_add_circle_24"
        android:contentDescription="@string/user_image"
        app:shapeAppearanceOverlay="@style/CircularShape2"/>

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edittext_background"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/editPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:inputType="phone"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edittext_background"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edittext_background"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginBottom="24dp"
        android:background="@drawable/edittext_background"
        android:padding="12dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/black"
        app:cornerRadius="8dp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Log in"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:padding="10dp"
        android:layout_marginBottom="24dp"
        android:layout_gravity="center"/>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
</LinearLayout>
